--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html lang="zxx">
 <head>
-<title>KSBA BANKING a Banking Category Bootstrap Responsive Web Template | Home :: w3layouts</title>
+<title>KSBA BANKING </title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
