--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="w3l-nav">
 				<ul class="nav navbar-nav link-effect">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="#team" class="scroll">Team</a></li>
-					<li><a href="#abouts" class="scroll">About US</a></li>
+				
+					<li><a href="#about" class="scroll">About US</a></li>
 					<li><a href="#services" class="scroll">Our Services</a></li>
+					<li><a href="#team" class="scroll">Team</a></li>
 					<li><a href="#gallery" class="scroll">Gallery</a></li>	
 					<li><a href="#contact" class="scroll">Contact Us</a></li>
 				</ul>
