--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<ul class="nav navbar-nav link-effect">
 					<li class="active"><a href="index.html">Home</a></li>
 				
-					<li><a href="#about" class="scroll">About US</a></li>
+					<li><a href="#about" class="scroll">About Us</a></li>
 					<li><a href="#services" class="scroll">Our Services</a></li>
 					<li><a href="#team" class="scroll">Team</a></li>
 					<li><a href="#gallery" class="scroll">Gallery</a></li>	
