--- a/login_incorrect.html
+++ b/login_incorrect.html
@@ -53,12 +53,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div class="banner-slider">
 				<div class="container">
 					<form class="sign-up" method="POST" name="myform" onsubmit="return validate()">
-						<h1 class="sign-up-title">Invalid Credentials!</h1>
+						<h1 class="sign-up-title">Invalid Credentials.</h1>
 						
 						<a href="http://ksba.com/signin"><input value="Retry" class="sign-up-button"></a>
                               <br>         
-                                        <p><a href="http://ksba.com/"> Forgot UserID?</a></p>
-                                        <p><a href="http://ksba.com/"> Forgot Password?</a></p>
+                                     <br>   <p><a href="http://ksba.com/"> Forgot user ID?</a></p>
+                                        <p><a href="http://ksba.com/"> Forgot password?</a></p>
 					
 					  </form>	
 				<div class="callbacks_container">
